--- a/src/css/ComposeModal.styl
+++ b/src/css/ComposeModal.styl
@@ -1,4 +1,7 @@
 .compose-container 
-  position absolute
-  bottom 0px
-  right 0px
+
+  div:nth-child(1), div:nth-child(2), div:nth-child(3), div:nth-child(5)
+    flex 0.1
+
+  div:nth-child(4)
+    flex 0.6
