--- a/src/css/ComposeModal.styl
+++ b/src/css/ComposeModal.styl
@@ -1,7 +1,7 @@
 .compose-container 
 
-  div:nth-child(1), div:nth-child(2), div:nth-child(3), div:nth-child(5)
+  div:nth-child(1), div:nth-child(2), div:nth-child(3), div:nth-child(4), div:nth-child(6)
     flex 0.1
 
-  div:nth-child(4)
-    flex 0.6
+  div:nth-child(5)
+    flex 0.5
